1.3.3 java version update